--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.wu-man</groupId>
     <artifactId>androidimageloader-parent</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>0.1</version>
     <packaging>pom</packaging>
 
     <parent>
@@ -234,7 +233,7 @@
         <url>https://github.com/wuman/AndroidImageLoader</url>
         <connection>scm:git:git://github.com/wuman/AndroidImageLoader.git</connection>
         <developerConnection>scm:git:git@github.com:wuman/AndroidImageLoader.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>androidimageloader-0.1</tag>
     </scm>
 
     <prerequisites>
