[maven-release-plugin] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>com.wu-man</groupId>
     <artifactId>androidimageloader-parent</artifactId>
-    <version>0.1</version>
+    <version>0.2-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <parent>
@@ -233,7 +233,7 @@
         <url>https://github.com/wuman/AndroidImageLoader</url>
         <connection>scm:git:git://github.com/wuman/AndroidImageLoader.git</connection>
         <developerConnection>scm:git:git@github.com:wuman/AndroidImageLoader.git</developerConnection>
-        <tag>androidimageloader-0.1</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <prerequisites>
