--- a/samples/pom.xml
+++ b/samples/pom.xml
@@ -38,7 +38,7 @@
     <parent>
         <groupId>com.wu-man</groupId>
         <artifactId>androidimageloader-parent</artifactId>
-        <version>0.1</version>
+        <version>0.2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
