--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,7 @@
                     <configuration>
                         <arguments>-Dgpg.passphrase=${gpg.passphrase}</arguments>
                         <releaseProfiles>release-sign-artifacts</releaseProfiles>
+                        <autoVersionSubmodules>true</autoVersionSubmodules>
                     </configuration>
                 </plugin>
                 <plugin>
