zipalign the resulting apk

--- a/pom.xml
+++ b/pom.xml
@@ -187,9 +187,18 @@
                             <platform>${android.platform}</platform>
                         </sdk>
                         <undeployBeforeDeploy>true</undeployBeforeDeploy>
+                        <sign>
+                            <debug>false</debug>
+                        </sign>
                         <manifest>
                             <versionCodeUpdateFromVersion>true</versionCodeUpdateFromVersion>
                         </manifest>
+                        <zipalign>
+                            <verbose>true</verbose>
+                            <skip>false</skip>
+                            <inputApk>${project.build.directory}/${project.artifactId}-${project.version}.apk</inputApk>
+                            <outputApk>${project.build.directory}/${project.artifactId}-${project.version}-signed-aligned.apk</outputApk>
+                        </zipalign>
                     </configuration>
                     <extensions>true</extensions>
                     <executions>
