--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ before_install:
   - export ANDROID_HOME=${PWD}/android-sdk-linux
   - export PATH=${PATH}:${ANDROID_HOME}/tools:${ANDROID_HOME}/platform-tools
   - android list sdk
-  - android update sdk --filter tools,platform-tools,android-16 --no-ui --force --verbose
+  - android -v update sdk --filter tools,platform-tools,android-16 --no-ui --force 
