update before install

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ notifications:
   email: false
 
 before_install:
+  - sudo apt-get update -qq
   - if [ `uname -m` = x86_64 ]; then sudo apt-get install -qq --force-yes libgd2-xpm ia32-libs ia32-libs-multiarch; fi
   - wget -nv http://dl.google.com/android/android-sdk_r21.0.1-linux.tgz
   - tar zxvf android-sdk_r21.0.1-linux.tgz
